updated dockerfile to 'git clone' rather than download a zip

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,18 +2,15 @@ FROM node:lts-alpine3.11 AS openvidu-call-build
 
 WORKDIR /openvidu-call
 
-RUN apk add wget unzip && \
-    wget "https://github.com/j-chick/openvidu-call-react/archive/master.zip" -O openvidu-call.zip && \
-    unzip openvidu-call.zip && \
-    rm -f openvidu-call.zip && \
-    mv openvidu-call-react-master/openvidu-call-react/ . && \
-    rm -rf openvidu-call-react-master && \
+RUN apk add git && \
+    git clone "https://github.com/j-chick/openvidu-call-react" current-master-branch && \
+    mv current-master-branch/openvidu-call-react . && \
+    rm -rf current-master-branch && \
     rm -f openvidu-call-react/package-lock.json && \
     npm install --prefix=openvidu-call-react/ && \
     npm run build --prefix=openvidu-call-react/ && \
     mv openvidu-call-react/build . && \
     rm -rf openvidu-call-react
-
 
 FROM node:lts-alpine3.11
 
