--- a/openvidu-call-react/package.json
+++ b/openvidu-call-react/package.json
@@ -9,7 +9,13 @@
         "@material-ui/core": "4.9.10",
         "@material-ui/icons": "4.9.1",
         "axios": "0.19.2",
+        "eslint": "^6.6.0",
+        "eslint-config-airbnb": "^18.2.0",
+        "eslint-plugin-import": "^2.22.0",
+        "eslint-plugin-jsx-a11y": "^6.3.1",
+        "eslint-plugin-react": "^7.20.0",
         "jquery": "3.5.0",
+        "node-fetch": "^2.6.0",
         "openvidu-browser": "2.15.0",
         "react": "16.13.1",
         "react-dom": "16.13.1",
