--- a/openvidu-call-react/public/manifest.json
+++ b/openvidu-call-react/public/manifest.json
@@ -11,5 +11,5 @@
   "start_url": "./index.html",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#494949"
+  "background_color": "#36393d"
 }
